--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,10 @@
 /* font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif; */
 
+h1 {
+    font-family: "Playfair Display", serif;
+}
+
 .navbar {
     font-family: "Poppins", sans-serif;
     font-size: 17px;
@@ -17,6 +21,7 @@ font-family: 'Poppins', sans-serif; */
     box-shadow: 0 8px 6px -6px gray;
     --webkit-box-shadow: 0 8px 6px -6px gray;
     border-bottom: solid gray !important;
+    min-height: 10vh;
 }
 
 .nav-link {
@@ -33,12 +38,16 @@ font-family: 'Poppins', sans-serif; */
     letter-spacing: 3px;
 }
 
+main {
+    min-height: 75vh;
+}
+
 /* =============================
 ==========footer============= */
 
 .footer {
     color: white;
-    padding: 25px;
+    min-height: 15vh;
     background: #000000; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to right,
@@ -98,4 +107,9 @@ font-family: 'Poppins', sans-serif; */
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.register {
+    text-align: center;
+    margin-top: 50px;
 }
